--- a/src/app/index.css
+++ b/src/app/index.css
@@ -41,3 +41,18 @@
 .margin-left-wider{
   padding-left:20px;
 }
+
+.schedule-container{
+  position:fixed;
+  width:66.6%;
+  height:100vh;
+  overflow-x: scroll
+}
+
+.ui-draggable-dragging{
+  opacity:0.5;
+}
+
+.hover{
+  background-color:#CCC;
+}
