--- a/src/app/components/eventList/eventList.template.html
+++ b/src/app/components/eventList/eventList.template.html
@@ -13,7 +13,9 @@
       </div>
       <div class="col-xs-12">
         <div  ng-repeat="event in list.events | filter:{name:list.filter, scheduled:list.status}" class="panel event" ng-class="{'panel-primary':!event.scheduled, 'panel-success':event.scheduled}">
-          <div on-drop-success="list.dropSuccess(event)" ui-draggable="true" drag="event" class="panel-heading no-radius">{{list.getNbSpaces(event)*list.spaceGap}}min - {{event.name}}</div>
+          <div on-drop-success="list.dropSuccess(event)" ui-draggable="true" drag="event" class="panel-heading no-radius">
+            {{list.getNbSpaces(event)*list.spaceGap}}min - {{event.name}} <span ng-show="event.venue">- {{event.venue}}</span>
+          </div>
         </div>
       </div>
     </div>
