--- a/src/app/components/schedule/schedule.template.html
+++ b/src/app/components/schedule/schedule.template.html
@@ -7,16 +7,15 @@
           <div class="panel panel-info minh">
             <div class="panel-heading no-radius">{{room.name}}</div>
             <div class="panel-body margin-left-wider">
-              <div ng-class="{danger:!space.canDrop}" ui-on-drop="schedule.setEvent(room, index ,$data)" drag-hover-class="hover" ng-repeat="(index,space) in room.spaces">
+              <div class="space-content" style="border-left-color:{{schedule.getColor(space.event)}}" ng-class="schedule.getSpaceClasses(space, index)"
+                  ui-on-drop="schedule.setEvent(room, index ,$data)"
+                  drag-hover-class="hover"
+                  ng-repeat="(index,space) in room.spaces">
                 <span class="hour-helper">
                   <span ng-show="index%schedule.gapPerHour === 0">{{schedule.time.startHour + index/schedule.gapPerHour}}h</span>
-                  <span ng-show="$index === index%schedule.gapPerHour && $index !== 0" ng-repeat="gap in schedule.gaps" class="tiny">{{gap}}</span>
                 </span>
-                <span ng-show="space.event.name">{{space.event.name | limitTo:10}}...</span>
-                <div class="schedule-spacer" ng-show="index%schedule.gapPerHour !== 0" style="border-bottom:solid 0.5px">
-                </div>
-                <div class="schedule-spacer" ng-show="index%schedule.gapPerHour === 0" style="border-bottom:solid 2px">
-                </div>
+                <span style="margin-left:2px" ng-show="space.event.name && space.first">{{space.event.name | limitTo:15}}...</span>
+                <span class="btn-remove" ng-click="schedule.clearEvent(room.spaces, index)" ng-show="space.event && space.first">x</span>
               </div>
             </div>
           </div>
