--- a/src/app/index.css
+++ b/src/app/index.css
@@ -21,15 +21,34 @@
   min-height: 500px;
 }
 
+.btn-remove{
+  position:absolute;
+  top:2px;
+  right:1px;
+  border:solid 0.5px red;
+  height:12px;
+  width:12px;
+  text-align: center;
+  line-height: 9.5px;
+  color:red;
+  border-radius:2px;
+}
+
+.btn-remove:hover{
+  background-color: red;
+  color:white;
+  cursor:pointer;
+}
+
 .padding-xs {
   padding:1px;
 }
 
 .hour-helper{
-  position:relative;
-  font-size: 0.6em;
-  top:-13px;
-  left:-16px;
+  position:absolute;
+  font-size: 0.7em;
+  top:-6px;
+  left:-17px;
 }
 
 .tiny{
@@ -64,4 +83,45 @@
 .schedule-spacer{
   position:relative;
   top:-21.6px;
+}
+
+button.btn-classy {
+  background-color: white;
+  border-color:#337ab7;
+  color:#337ab7;
+}
+
+button.btn-classy:hover {
+  background-color: #337ab7;
+  color:white;
+}
+
+.border-left{
+  border-left: solid 1px;
+}
+
+div.add-top{
+  border-top: solid;
+}
+div.thin-top{
+  border-top-width: 1px;
+}
+div.big-top{
+  border-top-width: 2px;
+}
+div.with-event{
+  border-left: solid 4px;
+}
+
+.space-content{
+  position:relative;
+  height: 15px;
+  font-size: 0.8em;
+}
+
+.big-top.with-event:{
+  border-top-style: dotted;
+}
+div.add-border-top:{
+  border-top:solid;
 }
