--- a/src/app/index.css
+++ b/src/app/index.css
@@ -21,6 +21,7 @@ th,td{
 
 .event-slot{
   border: solid 1px;
+  line-height: 100%;
 }
 
 .event-slot.selected{
@@ -29,8 +30,22 @@ th,td{
 .floating-form{
   text-align: center;
   position:fixed;
-  bottom:10px;
+  bottom:30px;
+  z-index:1000;
 }
 .no-border{
   border:none;
+}
+
+.floating-conf{
+  position:relative;
+  border:solid 0.5px;
+  padding:10px;
+  background-color: #CCCCCC;
+  z-index:1000;
+}
+
+.event-name{
+  position:relative;
+  top:50%;
 }
