try another method to push event in list

--- a/src/app/components/schedule/schedule.template.html
+++ b/src/app/components/schedule/schedule.template.html
@@ -1,5 +1,5 @@
 <div class="panel panel-primary minh schedule-container" style="border-radius:0px">
-  <div class="panel-heading no-radius" style="border-radius:0px">Shedule</div>
+  <div class="panel-heading no-radius" style="border-radius:0px">Schedule</div>
   <div class="panel-body">
     <div class="col-xs-12">
       <div class="row">
