ugly temporary fix

--- a/src/app/components/schedit.template.html
+++ b/src/app/components/schedit.template.html
@@ -4,7 +4,7 @@
       <sc-event-list sc-events='schedit.events'></sc-event-list>
     </div>
     <div class="col-xs-8 minh padding-xs">
-      <sc-schedule sc-rooms='schedit.options.rooms' sc-time="schedit.options.time"></sc-schedule>
+      <sc-schedule sc-rooms='schedit.options.rooms' sc-time="schedit.options.time" sc-days="schedit.options.days"></sc-schedule>
     </div>
   </div>
 </div>
