--- a/src/app/components/schedule/schedule.template.html
+++ b/src/app/components/schedule/schedule.template.html
@@ -2,7 +2,8 @@
   <div class="panel-heading no-radius" style="border-radius:0px">Schedule</div>
   <div class="panel-body">
     <div class="col-xs-12">
-      <div class="row">
+      <div class="row" ng-repeat="day in schedule.days">
+        <h4>{{day}}</h4>
         <div class="padding-xs col-xs-{{schedule.floor(12/schedule.rooms.length)}}" ng-repeat="room in schedule.rooms">
           <div class="panel panel-info minh">
             <div class="panel-heading no-radius">{{room.name}}</div>
